fixed header and link contrast

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -56,11 +56,11 @@ body, html {
 }
 
 body {
-    border-top: 5px solid #189ad3;
+    border-top: 5px solid #157EAC;
 }
 
 a {
-    color: #189ad3;
+    color: #157EAC;
     text-decoration: inherit;
 }
 
@@ -84,7 +84,7 @@ header {
 
 #brand-2 {
     font-size: 26px;
-    color: #189ad3;
+    color: #157EAC;
     font-weight: bold;
 }
 
@@ -162,7 +162,7 @@ nav .share {
     width: 8px;
     height: 8px;
     background-color: #fff;
-    border: 4px solid #189ad3;
+    border: 4px solid #157EAC;
     border-radius: 100%;
     left: -31px;
     top: 15px;
@@ -172,7 +172,7 @@ nav .share {
 /* Tags styling */
 
 .tags i {
-    color: #189ad3;
+    color: #157EAC;
 }
 
 /* Article styling */
@@ -194,7 +194,7 @@ h1, h2, h3 {
     font-weight: 500;
     letter-spacing: -1px;
     line-height: 1.2;
-    color: #189ad3;
+    color: #157EAC;
 }
 
 h1 {
@@ -231,8 +231,8 @@ blockquote {
     font-size: 34px;
     font-weight: 300;
     line-height: 1.3;
-    color: #189ad3;
-    border-left: 3px solid #189ad3;
+    color: #157EAC;
+    border-left: 3px solid #157EAC;
 }
 
 .tweet {
@@ -298,7 +298,7 @@ blockquote {
 }
 
 #subscribe i {
-    color: #189ad3;
+    color: #157EAC;
 }
 
 .subscribe-input {
@@ -339,11 +339,11 @@ blockquote {
     font-weight: 500;
     letter-spacing: -1px;
     line-height: 1.2;
-    color: #189ad3;
+    color: #157EAC;
 }
 
 .jcSendCommentButton {
-    background-color: #189ad3 !important;
+    background-color: #157EAC !important;
     text-shadow: none !important;
 }
 
